@@ -61,7 +61,9 @@ rejectNode <- function(graph, node, verbose=FALSE) {
 		if (verbose) cat("Alpha is passed via epsilon-edges.\n")
 		for (to in nodes(graph)[nodes(graph)!=node]) {	
 			numberOfEpsilonEdges <- sum(TRUE == all.equal(edgesOut, rep(0, length(edgesOut))))
-			nodeData(graph2, to, "alpha") <- nodeData(graph, to, "alpha")[[to]] + nodeData(graph, node, "alpha")[[node]] / numberOfEpsilonEdges				
+			if (existsEdge(graph, node, to)) {
+				nodeData(graph2, to, "alpha") <- nodeData(graph, to, "alpha")[[to]] + nodeData(graph, node, "alpha")[[node]] / numberOfEpsilonEdges
+			}
 		}		
 	} else {
 		if (verbose) cat("Alpha is passed via non-epsilon-edges.\n")
